--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,6 +1,6 @@
 development: &non_production_settings
-  site_url: http://10.200.1.25:3000
-  site_name: Bort
+  site_url: http://10.200.1.25/fam
+  site_name: Famicles
   admin_email: joe@jnmsolutions.com
   
 test:
