--- a/spec/fixtures/profiles.yml
+++ b/spec/fixtures/profiles.yml
@@ -13,3 +13,31 @@ two:
   gender: 1
   birthdate: 2008-09-24
   about_me: MyText
+# == Schema Info
+# Schema version: 20081004035902
+#
+# Table name: profiles
+#
+#  id                       :integer(4)      not null, primary key
+#  user_id                  :integer(4)      not null
+#  about_me                 :string(2000)
+#  birthdate                :date            not null
+#  favorite_movies          :string(2000)
+#  favorite_music           :string(2000)
+#  favorite_sites           :string(2000)
+#  favorite_tv              :string(2000)
+#  full_name                :string(50)      not null, default("")
+#  gender                   :integer(1)      not null
+#  gender_public            :boolean(1)      default(TRUE)
+#  hometown                 :string(100)
+#  parenting_style          :string(100)
+#  political_view           :string(100)
+#  public                   :boolean(1)      default(TRUE)
+#  public_birthdate_display :integer(1)      not null
+#  religious_view           :string(100)
+#  timezone                 :string(50)      not null, default("")
+#  what_i_do                :string(2000)
+#  what_i_like              :string(2000)
+#  created_at               :datetime
+#  updated_at               :datetime
+
