--- a/spec/fixtures/relationships.yml
+++ b/spec/fixtures/relationships.yml
@@ -7,3 +7,15 @@ one:
 two:
   user_id: 
   relationship_type_id: 
+# == Schema Info
+# Schema version: 20081004035902
+#
+# Table name: relationships
+#
+#  id                   :integer(4)      not null, primary key
+#  related_to_id        :integer(4)      not null
+#  relationship_type_id :integer(4)      not null
+#  user_id              :integer(4)      not null
+#  created_at           :datetime
+#  updated_at           :datetime
+
