--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -40,3 +40,23 @@ old_password_holder:
 
 
   state:                     active
+# == Schema Info
+# Schema version: 20081004035902
+#
+# Table name: users
+#
+#  id                        :integer(4)      not null, primary key
+#  activation_code           :string(40)
+#  crypted_password          :string(40)
+#  email                     :string(100)
+#  login                     :string(40)
+#  name                      :string(100)     default("")
+#  remember_token            :string(40)
+#  salt                      :string(40)
+#  state                     :string(255)     default("passive")
+#  activated_at              :datetime
+#  created_at                :datetime
+#  deleted_at                :datetime
+#  remember_token_expires_at :datetime
+#  updated_at                :datetime
+
