--- a/spec/fixtures/email_addresses.yml
+++ b/spec/fixtures/email_addresses.yml
@@ -11,3 +11,16 @@ two:
   email: MyString
   validated: false
   default: false
+# == Schema Info
+# Schema version: 20081004035902
+#
+# Table name: email_addresses
+#
+#  id              :integer(4)      not null, primary key
+#  contact_info_id :integer(4)      not null
+#  default         :boolean(1)      not null
+#  email           :string(255)     not null, default("")
+#  validated       :boolean(1)      not null
+#  created_at      :datetime
+#  updated_at      :datetime
+
