--- a/spec/fixtures/famicle_memberships.yml
+++ b/spec/fixtures/famicle_memberships.yml
@@ -13,3 +13,16 @@ two:
   role_id: 1
   position: 1
   default: false
+# == Schema Info
+# Schema version: 20081004035902
+#
+# Table name: famicle_memberships
+#
+#  id         :integer(4)      not null, primary key
+#  famicle_id :integer(4)      not null
+#  user_id    :integer(4)      not null
+#  default    :boolean(1)      not null
+#  role       :string(255)     not null, default("")
+#  created_at :datetime
+#  updated_at :datetime
+
