--- a/spec/fixtures/famicles.yml
+++ b/spec/fixtures/famicles.yml
@@ -7,3 +7,15 @@ one:
 two:
   name: MyString
   description: MyText
+# == Schema Info
+# Schema version: 20081004035902
+#
+# Table name: famicles
+#
+#  id          :integer(4)      not null, primary key
+#  description :text
+#  name        :string(255)     not null, default("")
+#  public      :boolean(1)      not null, default(TRUE)
+#  created_at  :datetime
+#  updated_at  :datetime
+
