--- a/spec/fixtures/instant_message_accounts.yml
+++ b/spec/fixtures/instant_message_accounts.yml
@@ -9,3 +9,15 @@ two:
   contact_info_id: 1
   name: MyString
   provider: MyString
+# == Schema Info
+# Schema version: 20081004035902
+#
+# Table name: instant_message_accounts
+#
+#  id              :integer(4)      not null, primary key
+#  contact_info_id :integer(4)      not null
+#  name            :string(255)     not null, default("")
+#  provider        :string(255)     not null, default("")
+#  created_at      :datetime
+#  updated_at      :datetime
+
