--- a/spec/fixtures/relationship_types.yml
+++ b/spec/fixtures/relationship_types.yml
@@ -5,3 +5,14 @@ one:
 
 two:
   name: MyString
+# == Schema Info
+# Schema version: 20081004035902
+#
+# Table name: relationship_types
+#
+#  id         :integer(4)      not null, primary key
+#  name       :string(255)     not null, default("")
+#  value      :string(255)     not null, default("")
+#  created_at :datetime
+#  updated_at :datetime
+
