--- a/spec/fixtures/high_school_attendances.yml
+++ b/spec/fixtures/high_school_attendances.yml
@@ -9,3 +9,15 @@ two:
   profile_id: 1
   high_school_id: 1
   class_year: 1
+# == Schema Info
+# Schema version: 20081005033651
+#
+# Table name: high_school_attendances
+#
+#  id             :integer(4)      not null, primary key
+#  high_school_id :integer(4)      not null
+#  profile_id     :integer(4)      not null
+#  class_year     :integer(4)
+#  created_at     :datetime
+#  updated_at     :datetime
+
