--- a/spec/fixtures/high_schools.yml
+++ b/spec/fixtures/high_schools.yml
@@ -5,3 +5,13 @@ one:
 
 two:
   name: MyString
+# == Schema Info
+# Schema version: 20081005033651
+#
+# Table name: high_schools
+#
+#  id         :integer(4)      not null, primary key
+#  name       :string(255)     not null, default("")
+#  created_at :datetime
+#  updated_at :datetime
+
