--- a/spec/fixtures/college_attendances.yml
+++ b/spec/fixtures/college_attendances.yml
@@ -11,3 +11,16 @@ two:
   college_id: 1
   class_year: 1
   major: MyString
+# == Schema Info
+# Schema version: 20081007031845
+#
+# Table name: college_attendances
+#
+#  id         :integer(4)      not null, primary key
+#  college_id :integer(4)      not null
+#  profile_id :integer(4)      not null
+#  class_year :integer(4)
+#  major      :string(255)
+#  created_at :datetime
+#  updated_at :datetime
+
