--- a/spec/fixtures/employments.yml
+++ b/spec/fixtures/employments.yml
@@ -17,3 +17,19 @@ two:
   start: MyString
   end: MyString
   description: MyString
+# == Schema Info
+# Schema version: 20081007031845
+#
+# Table name: employments
+#
+#  id          :integer(4)      not null, primary key
+#  employer_id :integer(4)      not null
+#  profile_id  :integer(4)      not null
+#  description :string(500)
+#  end         :string(20)
+#  location    :string(50)
+#  position    :string(100)
+#  start       :string(20)
+#  created_at  :datetime
+#  updated_at  :datetime
+
