--- a/spec/fixtures/famicle_memberships.yml
+++ b/spec/fixtures/famicle_memberships.yml
@@ -1,18 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  user_id: 1
-  famicle_id: 1
-  role_id: 1
-  position: 1
+  user: quentin
+  famicle: goldwasser
+  role: creator
   default: false
 
-two:
-  user_id: 1
-  famicle_id: 1
-  role_id: 1
-  position: 1
-  default: false
 # == Schema Info
 # Schema version: 20081007031845
 #
