--- a/spec/fixtures/photos.yml
+++ b/spec/fixtures/photos.yml
@@ -20,7 +20,7 @@ two:
 # == Schema Info
 # Schema version: 20081011041853
 #
-# Table name: profile_photos
+# Table name: photos
 #
 #  id           :integer(4)      not null, primary key
 #  parent_id    :integer(4)
