--- a/spec/fixtures/famicles.yml
+++ b/spec/fixtures/famicles.yml
@@ -8,14 +8,16 @@ lie:
   name: The Lies
   description: MyText
 # == Schema Info
-# Schema version: 20081011041853
+# Schema version: 20081031044001
 #
 # Table name: famicles
 #
-#  id          :integer(4)      not null, primary key
-#  description :text
-#  name        :string(255)     not null, default("")
-#  public      :boolean(1)      not null, default(TRUE)
-#  created_at  :datetime
-#  updated_at  :datetime
+#  id            :integer(4)      not null, primary key
+#  description   :text
+#  hometown      :string(255)
+#  most_resemble :string(255)
+#  name          :string(255)     not null, default("")
+#  public        :integer(1)      not null
+#  created_at    :datetime
+#  updated_at    :datetime
 
