--- a/spec/fixtures/photos.yml
+++ b/spec/fixtures/photos.yml
@@ -18,19 +18,20 @@ two:
   width: 1
   height: 1
 # == Schema Info
-# Schema version: 20081011041853
+# Schema version: 20081031044001
 #
 # Table name: photos
 #
-#  id           :integer(4)      not null, primary key
-#  parent_id    :integer(4)
-#  profile_id   :integer(4)      not null
-#  content_type :string(255)     not null, default("")
-#  filename     :string(255)     not null, default("")
-#  height       :integer(4)
-#  size         :integer(4)      not null
-#  thumbnail    :string(255)
-#  width        :integer(4)
-#  created_at   :datetime
-#  updated_at   :datetime
+#  id              :integer(4)      not null, primary key
+#  attachable_id   :integer(4)
+#  parent_id       :integer(4)
+#  attachable_type :string(255)
+#  content_type    :string(255)     not null, default("")
+#  filename        :string(255)     not null, default("")
+#  height          :integer(4)
+#  size            :integer(4)      not null
+#  thumbnail       :string(255)
+#  width           :integer(4)
+#  created_at      :datetime
+#  updated_at      :datetime
 
