--- a/spec/fixtures/profiles.yml
+++ b/spec/fixtures/profiles.yml
@@ -14,7 +14,7 @@ two:
   birthdate: 2008-09-24
   about_me: MyText
 # == Schema Info
-# Schema version: 20081011041853
+# Schema version: 20081031044001
 #
 # Table name: profiles
 #
@@ -28,11 +28,10 @@ two:
 #  favorite_tv              :string(2000)
 #  full_name                :string(50)      not null, default("")
 #  gender                   :integer(1)      not null
-#  gender_public            :boolean(1)      default(TRUE)
 #  hometown                 :string(100)
 #  parenting_style          :string(100)
 #  political_view           :string(100)
-#  public                   :boolean(1)      default(TRUE)
+#  public                   :integer(1)      not null
 #  public_birthdate_display :integer(1)      not null
 #  religious_view           :string(100)
 #  timezone                 :string(50)      not null, default("")
