--- a/spec/fixtures/profiles.yml
+++ b/spec/fixtures/profiles.yml
@@ -14,7 +14,7 @@ two:
   birthdate: 2008-09-24
   about_me: MyText
 # == Schema Info
-# Schema version: 20081031044850
+# Schema version: 20081105063617
 #
 # Table name: profiles
 #
@@ -30,6 +30,9 @@ two:
 #  gender                   :integer(1)      not null
 #  hometown                 :string(100)
 #  parenting_style          :string(100)
+#  photo_content_type       :string(255)
+#  photo_file_name          :string(255)
+#  photo_file_size          :integer(4)
 #  political_view           :string(100)
 #  public                   :integer(1)      not null
 #  public_birthdate_display :integer(1)      not null
@@ -38,5 +41,6 @@ two:
 #  what_i_do                :string(2000)
 #  what_i_like              :string(2000)
 #  created_at               :datetime
+#  photo_updated_at         :datetime
 #  updated_at               :datetime
 
